src/infra/istio/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: istio-system
spec:
  selector:
    matchLabels:
      auth: jwt
  rules:
    - from:
        - source:
            requestPrincipals: ["*"]
